[package]
name = "rust-totp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base32 = "0.5.1"
hex = "0.4.3"
hmac = "0.12.1"
js-sys = "0.3.69"
serde = { version = "1.0.204", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
sha1 = "0.10.6"
sha2 = "0.10.8"
tsify = "0.4.5"
wasm-bindgen = "0.2.92"
